--- a/main.ipynb
+++ b/main.ipynb
@@ -1,62 +1,101 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "b2bf295b",
-   "metadata": {},
-   "outputs": [
+  "cells": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Thiết bị đang sử dụng: cpu\n",
-      "LỖI: Chưa tải model Spacy. Hãy chạy lệnh 'python -m spacy download...'\n",
-      "Mọi thứ đã sẵn sàng để code!\n"
-     ]
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/NgThanhNhanf/NLP/blob/main/main.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "b2bf295b",
+      "metadata": {
+        "id": "b2bf295b",
+        "outputId": "409d52ab-3872-49f2-9610-b20babeb0dff"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Thiết bị đang sử dụng: cpu\n",
+            "LỖI: Chưa tải model Spacy. Hãy chạy lệnh 'python -m spacy download...'\n",
+            "Mọi thứ đã sẵn sàng để code!\n"
+          ]
+        }
+      ],
+      "source": [
+        "import torch\n",
+        "import spacy\n",
+        "import nltk\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "# Kiểm tra xem có nhận GPU không (Nếu dùng Colab nhớ bật GPU: Runtime -> Change runtime type -> T4 GPU)\n",
+        "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+        "print(f\"Thiết bị đang sử dụng: {device}\")\n",
+        "\n",
+        "# Kiểm tra Spacy load được model chưa\n",
+        "try:\n",
+        "    spacy_en = spacy.load('en_core_web_sm')\n",
+        "    spacy_fr = spacy.load('fr_core_news_sm')\n",
+        "    print(\"Spacy: Đã load thành công model Anh - Pháp!\")\n",
+        "except OSError:\n",
+        "    print(\"LỖI: Chưa tải model Spacy. Hãy chạy lệnh 'python -m spacy download...'\")\n",
+        "\n",
+        "print(\"Mọi thứ đã sẵn sàng để code!\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "AdByqGW3ZAXZ",
+        "outputId": "bad7da02-9022-4313-b55d-f48b6435d76e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "AdByqGW3ZAXZ",
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "fatal: not a git repository (or any of the parent directories): .git\n"
+          ]
+        }
+      ]
     }
-   ],
-   "source": [
-    "import torch\n",
-    "import spacy\n",
-    "import nltk\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# Kiểm tra xem có nhận GPU không (Nếu dùng Colab nhớ bật GPU: Runtime -> Change runtime type -> T4 GPU)\n",
-    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-    "print(f\"Thiết bị đang sử dụng: {device}\")\n",
-    "\n",
-    "# Kiểm tra Spacy load được model chưa\n",
-    "try:\n",
-    "    spacy_en = spacy.load('en_core_web_sm')\n",
-    "    spacy_fr = spacy.load('fr_core_news_sm')\n",
-    "    print(\"Spacy: Đã load thành công model Anh - Pháp!\")\n",
-    "except OSError:\n",
-    "    print(\"LỖI: Chưa tải model Spacy. Hãy chạy lệnh 'python -m spacy download...'\")\n",
-    "\n",
-    "print(\"Mọi thứ đã sẵn sàng để code!\")"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3 (ipykernel)",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.12"
+    },
+    "colab": {
+      "provenance": [],
+      "include_colab_link": true
+    }
   },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.12"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
