--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "id": "b2bf295b",
    "metadata": {},
    "outputs": [
@@ -11,7 +11,7 @@
      "output_type": "stream",
      "text": [
       "Thiết bị đang sử dụng: cpu\n",
-      "LỖI: Chưa tải model Spacy. Hãy chạy lệnh 'python -m spacy download...'\n",
+      "Spacy: Đã load thành công model Anh - Pháp!\n",
       "Mọi thứ đã sẵn sàng để code!\n"
      ]
     }
@@ -40,7 +40,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -54,7 +54,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
