--- a/main.ipynb
+++ b/main.ipynb
@@ -17,7 +17,7 @@
       ],
       "metadata": {
         "id": "JKtnQ7Y1_J30",
-        "outputId": "7d16b328-9a1a-4cc3-ccf0-da57375821c3",
+        "outputId": "2e2118a2-2027-40f6-8e08-32213887ee04",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -66,11 +66,12 @@
     {
       "cell_type": "code",
       "source": [
-        "!git clone https://github.com/NgThanhNhanf/NLP.git"
+        "%cd /content/\n",
+        "!git clone  https://github.com/NgThanhNhanf/NLP.git"
       ],
       "metadata": {
         "id": "AdByqGW3ZAXZ",
-        "outputId": "ec2905d5-fc30-4623-b3ca-0cf1a543ebb5",
+        "outputId": "beb39c68-cd79-43ed-8916-f4ab80e7fe36",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -82,6 +83,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "/content\n",
             "fatal: destination path 'NLP' already exists and is not an empty directory.\n"
           ]
         }
@@ -94,7 +96,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "739bf4d4",
-        "outputId": "b625f926-a090-46e4-a8d7-3abe03dd101a"
+        "outputId": "b7c7a5b8-97b4-4ef3-c5ee-039c249162e9"
       },
       "source": [
         "!python -m spacy download en_core_web_sm"
@@ -107,9 +109,8 @@
           "name": "stdout",
           "text": [
             "Collecting en-core-web-sm==3.8.0\n",
-            "  Downloading https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl (12.8 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.8/12.8 MB\u001b[0m \u001b[31m123.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h\u001b[38;5;2m✔ Download and installation successful\u001b[0m\n",
+            "  Using cached https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl (12.8 MB)\n",
+            "\u001b[38;5;2m✔ Download and installation successful\u001b[0m\n",
             "You can now load the package via spacy.load('en_core_web_sm')\n",
             "\u001b[38;5;3m⚠ Restart to reload dependencies\u001b[0m\n",
             "If you are in a Jupyter or Colab notebook, you may need to restart Python in\n",
@@ -126,7 +127,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "b59a600a",
-        "outputId": "dae5c57b-fca8-4813-db40-5995a6e39d30"
+        "outputId": "004cd114-0ab6-4b92-f0f6-5c6eecdcf9fc"
       },
       "source": [
         "!python -m spacy download fr_core_news_sm"
@@ -139,9 +140,8 @@
           "name": "stdout",
           "text": [
             "Collecting fr-core-news-sm==3.8.0\n",
-            "  Downloading https://github.com/explosion/spacy-models/releases/download/fr_core_news_sm-3.8.0/fr_core_news_sm-3.8.0-py3-none-any.whl (16.3 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m16.3/16.3 MB\u001b[0m \u001b[31m65.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h\u001b[38;5;2m✔ Download and installation successful\u001b[0m\n",
+            "  Using cached https://github.com/explosion/spacy-models/releases/download/fr_core_news_sm-3.8.0/fr_core_news_sm-3.8.0-py3-none-any.whl (16.3 MB)\n",
+            "\u001b[38;5;2m✔ Download and installation successful\u001b[0m\n",
             "You can now load the package via spacy.load('fr_core_news_sm')\n",
             "\u001b[38;5;3m⚠ Restart to reload dependencies\u001b[0m\n",
             "If you are in a Jupyter or Colab notebook, you may need to restart Python in\n",
@@ -171,7 +171,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mJo_QEZ3eFc-",
-        "outputId": "dba8f7f3-5fbc-431f-da29-741cbb143f16"
+        "outputId": "8124e51a-4bc1-43ba-bcb1-9564095b6e6f"
       },
       "id": "mJo_QEZ3eFc-",
       "execution_count": 5,
@@ -192,7 +192,7 @@
       ],
       "metadata": {
         "id": "beKp8unreKcq",
-        "outputId": "7c7e2fa8-bf2f-4c50-e984-9d17d3c8b499",
+        "outputId": "c55624c0-9170-4b47-db0a-30ff74575afa",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -324,11 +324,10 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 561
+          "base_uri": "https://localhost:8080/"
         },
         "id": "37P1IFku9Uew",
-        "outputId": "b80eb12b-6287-40d4-b8ee-98312916aeca"
+        "outputId": "61047956-f742-44a5-e154-9499f5ec3877"
       },
       "id": "37P1IFku9Uew",
       "execution_count": 7,
@@ -348,34 +347,18 @@
           ]
         },
         {
-          "output_type": "error",
-          "ename": "ImportError",
-          "evalue": "cannot import name 'get_data_loaders' from 'src.dataset' (/content/NLP/src/dataset.py)",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-1732303750.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mrandom\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msrc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mEncoder\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDecoder\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mSeq2Seq\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0msrc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdataset\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mget_data_loaders\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbuild_vocab_and_tokenizers\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0mSEED\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1234\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mImportError\u001b[0m: cannot import name 'get_data_loaders' from 'src.dataset' (/content/NLP/src/dataset.py)",
-            "",
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
-          ],
-          "errorDetails": {
-            "actions": [
-              {
-                "action": "open_url",
-                "actionText": "Open Examples",
-                "url": "/notebooks/snippets/importing_libraries.ipynb"
-              }
-            ]
-          }
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Thiết bị đang sử dụng: cuda\n"
+          ]
         }
       ]
     }
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
-      "language": "python",
+      "display_name": "Python 3",
       "name": "python3"
     },
     "language_info": {
@@ -392,8 +375,10 @@
     },
     "colab": {
       "provenance": [],
+      "gpuType": "T4",
       "include_colab_link": true
-    }
+    },
+    "accelerator": "GPU"
   },
   "nbformat": 4,
   "nbformat_minor": 5
