--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "JKtnQ7Y1_J30",
       "metadata": {
         "colab": {
@@ -150,7 +150,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "AdByqGW3ZAXZ",
       "metadata": {
         "collapsed": true,
@@ -183,7 +183,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "739bf4d4",
       "metadata": {
         "colab": {
@@ -216,7 +216,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "b59a600a",
       "metadata": {
         "colab": {
@@ -261,7 +261,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "mJo_QEZ3eFc-",
       "metadata": {
         "colab": {
@@ -285,7 +285,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "beKp8unreKcq",
       "metadata": {
         "colab": {
@@ -403,7 +403,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "37P1IFku9Uew",
       "metadata": {
         "colab": {
@@ -450,7 +450,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "id": "PIP0WfvnNYrC",
       "metadata": {
         "colab": {
@@ -479,7 +479,7 @@
         "\n",
         "# 1. Đường dẫn file (Đảm bảo bạn đã đổi tên file thành test.en, test.fr như mình dặn)\n",
         "SRC_FILE = 'data/raw/train.en'\n",
-        "TRG_FILE = 'data/raw/train.fr' # Hoặc tương tự cho Val/Test\n",
+        "TRG_FILE = 'data/raw/train.fr'\n",
         "\n",
         "# 2. Xây dựng Vocab & Tokenizer\n",
         "src_tokenizer = get_tokenizer('spacy', language='en_core_web_sm')\n",
@@ -511,7 +511,7 @@
         "outputId": "f072a55d-9561-4566-d211-601f3d13cab3"
       },
       "id": "kCsEwi2WN4V5",
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -527,7 +527,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "id": "v9_gXicKOdIi",
       "metadata": {
         "colab": {
@@ -562,14 +562,12 @@
         "model = Seq2SeqAttention(enc, dec, device).to(device)\n",
         "\n",
         "# --- KHỞI TẠO TRỌNG SỐ (WEIGHTS) ---\n",
-        "# Giúp model học nhanh hơn thay vì để random mặc định\n",
         "def init_weights(m):\n",
         "    for name, param in m.named_parameters():\n",
         "        nn.init.uniform_(param.data, -0.08, 0.08)\n",
         "\n",
         "model.apply(init_weights)\n",
         "\n",
-        "# Đếm số lượng tham số (Để ghi vào báo cáo cho oách)\n",
         "def count_parameters(model):\n",
         "    return sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
         "\n",
@@ -578,7 +576,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "id": "8bkmb9HQOjGT",
       "metadata": {
         "id": "8bkmb9HQOjGT"
@@ -594,7 +592,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "id": "3lg93jLsOm_L",
       "metadata": {
         "id": "3lg93jLsOm_L"
@@ -622,7 +620,7 @@
         "        epoch_train_loss = 0\n",
         "        batch_count = 0\n",
         "\n",
-        "        # Thêm progress bar đơn giản\n",
+        "        # Progress bar\n",
         "        print(f\"\\nEpoch {epoch+1}/{num_epochs} - Training...\")\n",
         "\n",
         "        for batch_idx, (source, target, source_lengths) in enumerate(train_loader):\n",
@@ -634,7 +632,7 @@
         "            # Forward với teacher forcing\n",
         "            output = model(source, target, source_lengths, teacher_forcing_ratio)\n",
         "\n",
-        "            # Tính loss (bỏ <sos> token)\n",
+        "            # Tính loss\n",
         "            output_dim = output.shape[-1]\n",
         "            output = output[:, 1:].reshape(-1, output_dim)\n",
         "            target = target[:, 1:].reshape(-1)\n",
@@ -729,7 +727,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "id": "M8WLff0_OoI7",
       "metadata": {
         "id": "M8WLff0_OoI7",
@@ -1266,7 +1264,7 @@
         }
       ],
       "source": [
-        "N_EPOCHS = 15 # Train 10 vòng\n",
+        "N_EPOCHS = 15 # Số epoch\n",
         "CLIP = 1\n",
         "\n",
         "train_losses, val_losses = train(model, train_iterator, valid_iterator,\n",
@@ -1278,7 +1276,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "id": "2y2v9V2JOrxF",
       "metadata": {
         "id": "2y2v9V2JOrxF",
@@ -1309,13 +1307,13 @@
         "plt.ylabel('Loss')\n",
         "plt.legend()\n",
         "plt.title('Biểu đồ huấn luyện Model LSTM')\n",
-        "plt.savefig('loss_chart.png') # Lưu ảnh\n",
+        "plt.savefig('loss_chart.png')\n",
         "plt.show()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "id": "_5at0VL9Osow",
       "metadata": {
         "id": "_5at0VL9Osow",
@@ -1338,7 +1336,6 @@
         }
       ],
       "source": [
-        "# --- ĐOẠN CODE VÁ LỖI ---\n",
         "from src.dataset import TranslationDataset, build_vocab_and_tokenizers\n",
         "\n",
         "# 1. Lấy lại bộ từ điển và tokenizer\n",
@@ -1354,7 +1351,6 @@
         "\n",
         "print(f\"--> Đã tải xong test_dataset với {len(test_dataset)} câu.\")\n",
         "# Load model tốt nhất\n",
-        "# model.load_state_dict(torch.load('best_model.pth'))\n",
         "checkpoint = torch.load('best_model.pth', map_location=device)\n",
         "model.load_state_dict(checkpoint['model_state_dict'])\n",
         "model = model.to(device)\n",
@@ -1415,7 +1411,6 @@
         "example_idx = 10\n",
         "\n",
         "# 2. Lấy trực tiếp từ list chứa text thô (Raw text)\n",
-        "# Lưu ý: Class TranslationDataset mình đưa bạn lưu text trong biến .src_data\n",
         "src = test_dataset.src_data[example_idx].strip()\n",
         "trg = test_dataset.trg_data[example_idx].strip()\n",
         "\n",
@@ -1431,7 +1426,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "id": "MBSaCTD9OwR6",
       "metadata": {
         "id": "MBSaCTD9OwR6",
@@ -1466,7 +1461,7 @@
       ],
       "source": [
         "from torchtext.data.metrics import bleu_score\n",
-        "from tqdm import tqdm  # Thư viện tạo thanh tiến trình (cần cài: pip install tqdm)\n",
+        "from tqdm import tqdm\n",
         "\n",
         "def calculate_bleu(data, model, device, max_len=50):\n",
         "    trgs = []\n",
@@ -1475,7 +1470,6 @@
         "    # Chuyển model sang chế độ đánh giá\n",
         "    model.eval()\n",
         "\n",
-        "    # Dùng tqdm bọc range lại để hiển thị thanh loading\n",
         "    print(f\"Đang tính toán BLEU trên {len(data)} câu...\")\n",
         "    for i in tqdm(range(len(data)), desc=\"Translating\"):\n",
         "\n",
@@ -1484,18 +1478,15 @@
         "        trg_raw = data.trg_data[i].strip()\n",
         "\n",
         "        # 2. Model dịch và trả về list token\n",
-        "        # Lưu ý: Hàm translate_sentence này lấy từ đoạn code trước\n",
         "        pred_trg = translate_sentence(src_raw, src_tokenizer, model, device, max_len)\n",
         "\n",
         "        # 3. Tokenize câu đích (Ground Truth)\n",
-        "        # SỬA LỖI: Dùng trg_tokenizer thay vì gọi hàm tokenize_fr lạ\n",
         "        if isinstance(trg_raw, str):\n",
         "            trg_tokenized = trg_tokenizer(trg_raw)\n",
         "        else:\n",
         "            trg_tokenized = list(trg_raw)\n",
         "\n",
         "        # --- Làm sạch (Filter) ---\n",
-        "        # Loại bỏ các token không cần thiết để tính điểm chính xác hơn\n",
         "        ignore_tokens = [\"<sos>\", \"<eos>\", \"<pad>\", \"<unk>\"]\n",
         "\n",
         "        pred_trg_clean = [tok for tok in pred_trg if tok not in ignore_tokens]\n",
@@ -1503,13 +1494,10 @@
         "\n",
         "        # 4. Thêm vào list theo đúng format torchtext yêu cầu\n",
         "        pred_trgs.append(pred_trg_clean)\n",
-        "        trgs.append([trg_tokenized_clean])    # Reference phải bọc trong 1 list nữa (vì 1 câu src có thể có nhiều câu trg)\n",
+        "        trgs.append([trg_tokenized_clean])\n",
         "\n",
         "    # --- Tính BLEU ---\n",
         "    return bleu_score(pred_trgs, trgs)\n",
-        "\n",
-        "# --- CHẠY THỬ ---\n",
-        "# Lưu ý: Quá trình này có thể mất 1-5 phút tùy độ lớn tập test và GPU\n",
         "score = calculate_bleu(test_dataset, model, device)\n",
         "print(f\"\\nBLEU score = {score*100:.2f}\")"
       ]
