--- a/main.ipynb
+++ b/main.ipynb
@@ -1467,11 +1467,11 @@
         "print(\"Pred:\", \" \".join(translation))"
       ],
       "metadata": {
-        "id": "VHeRnrR-8Z9e",
-        "outputId": "c56b98c4-bbbb-4cb3-e386-96c30ed8e169",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "VHeRnrR-8Z9e",
+        "outputId": "c56b98c4-bbbb-4cb3-e386-96c30ed8e169"
       },
       "id": "VHeRnrR-8Z9e",
       "execution_count": 41,
@@ -1487,14 +1487,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 44,
       "id": "MBSaCTD9OwR6",
       "metadata": {
         "id": "MBSaCTD9OwR6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ec0a6341-60c6-40f6-85d0-19e931910ee2"
+        "outputId": "38cbe788-ec68-4fb1-bb5d-d986c85ae1ae"
       },
       "outputs": [
         {
@@ -1508,7 +1508,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "Translating: 100%|██████████| 1000/1000 [00:14<00:00, 66.80it/s]\n"
+            "Translating: 100%|██████████| 1000/1000 [02:42<00:00,  6.16it/s]\n"
           ]
         },
         {
@@ -1516,7 +1516,7 @@
           "name": "stdout",
           "text": [
             "\n",
-            "BLEU score = 35.21\n"
+            "BLEU score = 40.60\n"
           ]
         }
       ],
@@ -1539,7 +1539,7 @@
         "        trg_raw = data.trg_data[i].strip()\n",
         "\n",
         "        # 2. Model dịch và trả về list token\n",
-        "        pred_trg = translate_sentence(src_raw, src_tokenizer, model, device, max_len)\n",
+        "        pred_trg = translate_sentence_beam(src_raw, src_tokenizer, src_vocab, trg_vocab, model, device, beam_size = 5)\n",
         "\n",
         "        # 3. Tokenize câu đích (Ground Truth)\n",
         "        if isinstance(trg_raw, str):\n",
